# rag-system

./: LICENSE  docker-compose.yaml  pyproject.toml
services/parser/: pyproject.toml
services/parser/app/core/: config.py  db.py  hashing.py  metrics.py
services/parser/migrations/: 001_init.sql
